[package]
name = "rich-sdl2-image-rust"
version = "0.5.0"
authors = ["MikuroXina <ryosukadnak@gmail.com>"]
edition = "2021"
description = "The sdl_image 2.0 wrapper for Rust."
repository = "https://github.com/MikuroXina/rich-sdl2-image-rust"
documentation = "https://mikuroxina.github.io/rich-sdl2-image-rust/rich_sdl2_image_rust/"
license = "Apache-2.0"
keywords = ["sdl2", "wrapper", "binding"]
categories = ["graphics"]
rust-version = "1.56"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
bitflags = "1.3.2"
rich-sdl2-rust = "0.10.0"
static_assertions = "1.1.0"

[build-dependencies]
bindgen = "0.59.1"
git2 = "0.13.21"
